# verifily

./: .env.example  .gitignore  BUILD_SUMMARY.md  CHANGELOG.md  LICENSE  MONITOR_COMMANDS.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  TESTING_RESULTS.md  VERSIONING.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  monitor_and_stop.sh  not set  pyproject.toml  railway.json  requirements.txt  setup.py  stress_test.py  train.yaml  verifily_setup.py
.github/workflows/: verifily-ci.yml
configs/: base.yaml  base_cpu.yaml  synth_20k.yaml  test.yaml
deploy/: Caddyfile  nginx.conf
docker/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  verifily-ci.Dockerfile
docs/: 3_minute_quickstart.md  ENTERPRISE_DEPLOYMENT.md  EXIT_CODES.md  api_jobs.md  api_local.md  api_production_hardening.md  architecture.md  badges.md  billing.md  bucket_to_pipeline.md  budget_guards.md  bundles.md  decision_gate.md  deploy_flyio.md  deploy_helm_lite.md  docker_production.md  docker_quickstart.md  drift.md  enterprise_readiness.md  fingerprints.md  guarantees.md  ingest.md  ml_failure_prevention.md  monitor.md  notifier.md  orgs_projects.md  performance.md  precommit.md  procurement_faq.md  product-overview.md  production_quickstart.md  quick_install.md  readiness.md  real_conditions.md  release_checklist.md  reliability.md  retrain.md  secrets_and_redaction.md  security_model.md  stability_contract.md  (+4 more)
docs/ci/: github_action_composite.md  quick_ci_init.md
docs/verifily-train-v1/: README.md  api.md  cli.md  eval.md  roadmap.md  run_artifacts.md  security_privacy.md  spec.md  user_guide.md
examples/: budget_demo.py
examples/benchmark_demo/: generate_large_dataset.py
examples/ci/: azure-pipelines.yml  github-actions.yml  gitlab-ci.yml
examples/classify_demo/: README.md
examples/customer_drill/: README.md  generate_fixtures.py  verifily.yaml
examples/fingerprint_demo/: ds_a.jsonl  ds_b_neardup.jsonl  ds_c_disjoint.jsonl
examples/ingest_demo/: data_cls.csv  data_sft.csv  data_sft.jsonl
examples/real_conditions/: generate_fixtures.py  verifily.yaml  verifily_clean.yaml
examples/verifily_train/: manifest.json  quickstart.py  sample_cls_data.jsonl  sample_sft_data.jsonl  train_classification.yaml  train_sft.yaml
report/: report.md
results/: metrics_table.csv
runs/model_a_human/: adapter_config.json  hashes.json  run_meta.json  train_metrics.json  training_info.json
runs/model_b_contaminated/: config.yaml  hashes.json  run_meta.json  train_metrics.json  training_info.json
runs/model_c_synthetic/: config.yaml  environment.json  hashes.json  run_meta.json  train_metrics.json  training_info.json
scripts/: demo_api_customer_drill.sh  demo_api_jobs.sh  demo_api_jobs_classify.sh  demo_api_jobs_retrain.sh  demo_backup_restore.sh  demo_benchmark.sh  demo_billing.sh  demo_billing_enforce.sh  demo_billing_preview.sh  demo_bucket_to_pipeline.sh  demo_ci_gate.sh  demo_customer_drill_ci.sh  demo_customer_drill_clean.sh  demo_customer_drill_leaked.sh  demo_drift.sh  demo_enterprise_trust.sh  demo_fingerprint.sh  demo_invoice.sh  demo_monitor.sh  demo_notify.sh  demo_org_mode.sh  demo_prod_smoke.sh  demo_quickstart.sh  demo_quickstart_ci.sh  demo_ready.sh  demo_real_conditions.sh  demo_regression.sh  demo_sdk_customer_drill.py  demo_sdk_customer_drill.sh  demo_stripe_stub.sh  demo_teams_rbac.sh  demo_workspaces.sh  enterprise_deploy_demo.sh  precommit_verifily.sh  run_all.sh  run_eval.sh  run_train_all.sh  smoke_hosted.sh  train_judge.py  train_scorer.py
src/: __init__.py  contaminate.py  data_builders.py  eval.py  plots.py  sanity_check.py  synthesize.py  train.py  utils.py
verifily_cli_v1/: README.md  __init__.py  __main__.py  cli.py  requirements.txt
verifily_cli_v1/commands/: badge.py  bundle.py  ci_init.py  compare.py  contamination.py  contract_check.py  doctor.py  eval.py  fingerprint_cmd.py  history.py  ingest.py  init.py  lineage.py  pipeline.py  quickstart.py  registry_cmd.py  report.py  reproduce.py  score.py  train.py  transform.py
verifily_cli_v1/core/: audit.py  backup_restore.py  benchmark.py  budget.py  classify.py  config_overrides.py  deploy_config.py  drift.py  embeddings.py  env.py  eval_metrics.py  fingerprint.py  flatten.py  hashing.py  integrity.py  io.py  learned_scorer.py  lineage_graph.py  manifest.py  minhash_lsh.py  model_judge.py  pii.py  quality.py  readers.py  readiness.py  redaction_audit.py  registry.py  runtime_paths.py  schemas.py  scoring.py  secrets.py  signed_decisions.py  subprocess.py  tfidf.py  topic_cluster.py  usage.py
verifily_cli_v1/integrations/: __init__.py  huggingface.py  mlflow.py  wandb.py
verifily_sdk/: README.md  pyproject.toml
verifily_sdk/tests/: conftest.py  test_sdk_async.py  test_sdk_client.py  test_sdk_effective_config.py  test_sdk_jobs.py  test_sdk_jobs_classify.py  test_sdk_jobs_retrain.py  test_sdk_monitor.py  test_sdk_org_mode.py  test_sdk_orgs_projects.py  test_sdk_retries.py  test_sdk_stripe.py  test_sdk_usage.py
verifily_sdk/verifily_sdk/: __init__.py  async_client.py  auth.py  client.py  errors.py  models.py  utils.py
verifily_train/: __init__.py  __main__.py  billing.py  callbacks.py  cli.py  compare.py  config.py  dataset.py  errors.py  evaluator.py  reproduce.py  run.py  setup.py  trainer.py  tuner.py  utils.py  web.py
verifily_transform_v1/: README.md  setup.py
website/: index.html  tsconfig.app.json
(+195 files in other folders)
