[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verifily"
version = "1.3.0"
description = "ML data quality gate — ingest, validate, and ship datasets with confidence."
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.9"
authors = [
    {name = "Verifily Team"},
]
keywords = ["ml", "data-quality", "dataset", "validation", "ci", "pipeline"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "cryptography>=41.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://verifily.io"
Documentation = "https://verifily.io/docs"
Repository = "https://github.com/verifily/verifily"

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
sdk = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]
arrow = [
    "pyarrow>=14.0.0",
]
pii = [
    "spacy>=3.5.0",
]
huggingface = [
    "datasets>=2.14.0",
]
wandb = [
    "wandb>=0.16.0",
]
mlflow = [
    "mlflow>=2.8.0",
]
integrations = [
    "datasets>=2.14.0",
    "wandb>=0.16.0",
    "mlflow>=2.8.0",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "safetensors>=0.3.0",
]
dev = [
    "pytest>=7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]
all = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "pytest>=7.0",
    "pyarrow>=14.0.0",
    "spacy>=3.5.0",
    "datasets>=2.14.0",
    "wandb>=0.16.0",
    "mlflow>=2.8.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "safetensors>=0.3.0",
]

[project.scripts]
verifily = "verifily_cli_v1.cli:app"

[tool.setuptools.packages.find]
include = ["verifily_cli_v1*", "verifily_sdk*"]
exclude = ["verifily_cli_v1.tests*", "verifily_sdk.tests*"]

[tool.pytest.ini_options]
testpaths = ["verifily_cli_v1/tests", "verifily_sdk/tests"]
